[package]
name = "ctest_cost_merge"
version = "0.1.0"
edition = "2021"
description = "Merge updates from multiple CTestCostData.txt into one file"
authors = ["Jonathan Schwender"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
csv = "1.2.2"
indexmap = "1.9.3"
serde = { version = "1.0.164", features = ["serde_derive"] }
